force-app/main/default/objects/Lead/fields/Aadhaar_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Card_Name__c</fullName>
    <label>Aadhaar Card Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>