force-app/main/default/objects/Lead/fields/Cibil_Score__c.field-meta.xml
<CustomField>
    <fullName>Cibil_Score__c</fullName>
    <label>Cibil Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>