force-app/main/default/objects/Lead/fields/fatherName__c.field-meta.xml
<CustomField>
    <fullName>fatherName__c</fullName>
    <label>FatherName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>