force-app/main/default/objects/Lead/fields/fatherOccupation__c.field-meta.xml
<CustomField>
    <fullName>fatherOccupation__c</fullName>
    <label>Father&apos;s Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>