force-app/main/default/objects/Lead/fields/fatherPhoneNo__c.field-meta.xml
<CustomField>
    <fullName>fatherPhoneNo__c</fullName>
    <label>Father&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>