force-app/main/default/objects/Lead/fields/Is_Aadhar_Manual_KYC_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Aadhar_Manual_KYC_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aadhar Manual KYC Match</label>
    <type>Checkbox</type>
</CustomField>