force-app/main/default/objects/Lead/fields/Is_Aadhar_Manual_OCR_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_Aadhar_Manual_OCR_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aadhar Manual OCR Match</label>
    <type>Checkbox</type>
</CustomField>