force-app/main/default/objects/Lead/fields/Is_PAN_Manual_KYC_Match__c.field-meta.xml
<CustomField>
    <fullName>Is_PAN_Manual_KYC_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PAN Manual KYC Match</label>
    <type>Checkbox</type>
</CustomField>