force-app/main/default/objects/Lead/fields/Lead_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address__c</fullName>
    <label>Lead Address</label>
    <type>TextArea</type>
</CustomField>