force-app/main/default/objects/Lead/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <displayFormat>L-{0000}</displayFormat>
    <label>Loan Number</label>
    <type>AutoNumber</type>
</CustomField>