force-app/main/default/objects/Lead/fields/Matching_Probability__c.field-meta.xml
<CustomField>
    <fullName>Matching_Probability__c</fullName>
    <label>Matching Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>