force-app/main/default/objects/Lead/fields/motherName__c.field-meta.xml
<CustomField>
    <fullName>motherName__c</fullName>
    <label>MotherName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>