force-app/main/default/objects/Lead/fields/motherOccupation__c.field-meta.xml
<CustomField>
    <fullName>motherOccupation__c</fullName>
    <label>Mother&apos;s Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>