force-app/main/default/objects/Lead/fields/motherPhoneNo__c.field-meta.xml
<CustomField>
    <fullName>motherPhoneNo__c</fullName>
    <label>Mother&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>