force-app/main/default/objects/Lead/fields/Pan_Name__c.field-meta.xml
<CustomField>
    <fullName>Pan_Name__c</fullName>
    <label>Pan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>